<resources>
    <string name="app_name">MADAssignment1</string>
    <string name="menu_home">Home</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_farm">My Farm</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>

    <!-- imports from old  -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_username">"Username"</string>
    <string name="prompt_confirm_pass">"Confirm Password"</string>
    <string name="remember_user">"Remember Me"</string>
    <string name="TandC">"I agree to the Terms and Conditions"</string>
    <string name="sign_up_caps">"SIGN UP"</string>
    <string name="sign_up_small">"Sign Up"</string>
    <string name="sign_up_here">"SIGN UP HERE"</string>
    <string name="back">"BACK"</string>
    <string name="login_caps">"LOGIN</string>
    <string name="login_small">"Login</string>

    <!-- Strings related to home -->
    <string name="motivationalQuote">"Quote"</string>
    <string name="greetings">TextView</string>
    <string name="stressed">STRESSED</string>
    <string name="happy">HAPPY</string>
    <string name="neutral">NEUTRAL</string>
    <string name="sad">SAD</string>
    <string name="recent_tasks">Recent Tasks:</string>
    <string name="upcoming_tasks">Upcoming Tasks</string>

    <!-- Strings related to calender -->
    <string name="calenderBack"><![CDATA[<-]]></string>
    <string name="CalenderForward"><![CDATA[->]]></string>
    <string name="textview">TextView</string>
    <string name="farmer_focus">Farmer Focus</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This widget displays today\'s tasks</string>


</resources>