<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_calendar_today_24"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_menu_data_usage_24"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_Tasks"
            android:icon="@drawable/ic_baseline_checklist_24"
            android:title="@string/menu_tasks" />
        <item
            android:id="@+id/nav_Timer"
            android:icon="@drawable/ic_menu_timer_24"
            android:title="@string/menu_timer" />

        <item
            android:id="@+id/nav_Farm"
            android:icon="@drawable/barn_icon"
            android:title="@string/menu_farm" />

        <item
            android:id="@+id/nav_AccountSettings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="Account Settings" />
        <item
            android:id="@+id/nav_Logout"
            android:icon="@drawable/ic_baseline_arrow_forward_24"
            android:title="Log Out"
            android:iconTint="@color/red" />


    </group>
</menu>