<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="sg.edu.np.mad.madassignment1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_Statistics"
        android:name="sg.edu.np.mad.madassignment1.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="sg.edu.np.mad.madassignment1.CalenderFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calender" />

    <fragment
        android:id="@+id/nav_Settings"
        android:name="sg.edu.np.mad.madassignment1.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_AccountSettings"
        android:name="sg.edu.np.mad.madassignment1.AccountSettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_account_settings" />
</navigation>