<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/displayMoodButtons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/roundedcontainer"
    tools:activityContext=".MoodFragment">

    <TextView
        android:id="@+id/moodQuestion"
        android:layout_width="351dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="How are you feeling today?"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/stressedButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_baseline_sentiment_very_dissatisfied_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sadButton"
        app:layout_constraintTop_toBottomOf="@+id/moodQuestion" />

    <ImageView
        android:id="@+id/happyButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_baseline_sentiment_very_satisfied_24"
        app:layout_constraintEnd_toStartOf="@+id/neutralButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moodQuestion" />

    <ImageView
        android:id="@+id/neutralButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_baseline_sentiment_neutral_24"
        app:layout_constraintEnd_toStartOf="@+id/sadButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/happyButton"
        app:layout_constraintTop_toBottomOf="@+id/moodQuestion" />

    <ImageView
        android:id="@+id/sadButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_baseline_sentiment_dissatisfied_24"
        app:layout_constraintEnd_toStartOf="@+id/stressedButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/neutralButton"
        app:layout_constraintTop_toBottomOf="@+id/moodQuestion" />

    <TextView
        android:id="@+id/mood_happy"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/happy"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/happyButton"
        app:layout_constraintTop_toBottomOf="@+id/happyButton" />

    <TextView
        android:id="@+id/mood_neutral"
        android:layout_width="50dp"
        android:layout_height="18dp"
        android:text="@string/neutral"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/neutralButton"
        app:layout_constraintTop_toBottomOf="@+id/neutralButton" />

    <TextView
        android:id="@+id/mood_sad"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/sad"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/sadButton"
        app:layout_constraintTop_toBottomOf="@+id/sadButton" />

    <TextView
        android:id="@+id/mood_stressed"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/stressed"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/stressedButton"
        app:layout_constraintTop_toBottomOf="@+id/stressedButton" />

</androidx.constraintlayout.widget.ConstraintLayout>